# inerf

./: pyproject.toml
inerf/: inerf_config.py  inerf_datamanager.py  inerf_dataparser.py  inerf_field.py  inerf_model.py  inerf_pipeline.py  inerf_trainer.py  inerf_utils.py
utils/: compare_origin_with_mask.ipynb  evaluation.ipynb  evaluation_pose copy.ipynb  evaluation_pose.ipynb  evaluation_pose_gif.ipynb  evaluation_pose_iterate_through_transform.ipynb  evaluation_pose_v2.ipynb  examine_sampled_pixels.ipynb  inerf_nerfstudio.ipynb  inerf_trainer.py  loss_debug.ipynb  pixel_level_debug.ipynb  process_pose_data.ipynb
