[project]
name = "inerf"
description = "Method created to spoof trainer and extract matrix correction"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["inerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
inerf = 'inerf.inerf_config:inerf_method'
